--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "ms": "^2.0.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "negotiator": "^0.6.3",
     "on-finished": "^2.3.0",
     "parseurl": "^1.3.3",
